@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 2.0.4
 Date: ????
-  Changes:
+  Major Features:
+    - Added support for Loaders Modernized
 ---------------------------------------------------------------------------------------------------
 Version: 2.0.3
 Date: 2024-12-06
